# PanoptesAI

./: .dockerignore  .env.example  .gitignore  .replit  CHANGELOG.md  Dockerfile  PLAN.md  PROJECT_STATE.md  README-dashboard.md  README.md  WORKLOG.md  architecture.md  cloudbuild.api.yaml  docker-compose.yml  firebase.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  replit.md  replit.nix  requirements-dev.txt  requirements.txt  smoke_test.py
.agents/: agent_assets_metadata.toml
.firebase/: hosting.YXJ0aWZhY3RzXG1vZGFyY2hpdGVjdFxkaXN0XHB1YmxpYw.cache
attached_assets/: Pasted--Stats-Analytics-DOCTYPE-html-html-class-dark-lang-en-h_1775576046375.txt  Pasted--of-502-Bad-Gateway-Understand-this-error-01-08-27-205-_1775780035247.txt  Pasted-14-21-38-794-index-Dj7ZnjDp-js-23-GET-https-panoptesai-_1776000150507.txt  Pasted-Here-you-go-a-clean-handoff-doc-for-this-thread-you-can_1775572849484.txt  Pasted-Updating-Success-v0-0-4-7-https-www-reddit-com-r-panopt_1776011832736.txt  Pasted-Yes-here-s-the-stripped-down-version-AI-integration-in-_1775607934076.txt  Pasted-panoptesaimod-latest-The-term-panoptesaimod-latest-is-n_1776013192446.txt  branding-1775825497617.json  content-1775825496077.md  content-1776002696194.md  content-1776008518090.md
dashboard/: db.py  html_template.py  main.py  models.py  requirements.txt
deploy/: sentry.service
devvit-app/: README.md  devvit.yaml  package-lock.json  package.json  tsconfig.json
functions/: .gitignore  package.json  tsconfig.json
reddit_scam_sentry/: actions.py  main.py  (+11 more)
(+53 files in other folders)
